testsuite/poke.pkl/in-diag-2.pk
/* { dg-do compile } */

defvar foo = [1,2,3] in "foo"; /* { dg-error "wrong type.*expected array" } */
